# TigerNovel

./: .gitignore  README.md  pyproject.toml  start_tigernovel.bat
agents/: defaults.yaml  goal.yaml  reviewer_character.yaml  reviewer_plot.yaml  reviewer_style.yaml  summarizer.yaml  worldbuilder.yaml  writer.yaml
prompts/: goal_system.md  reviewer_character_system.md  reviewer_plot_system.md  reviewer_style_system.md  summarizer_system.md  worldbuilder_system.md  writer_system.md
src/app/: cli.py
src/app/agents/: __init__.py  base.py  goal.py  reviewer.py  summarizer.py  worldbuilder.py  writer.py
src/app/core/: llm_client.py  orchestrator.py  prompt_loader.py
src/app/domain/: models.py  policies.py
src/app/services/: chapter_context.py  review_pipeline.py
src/app/storage/: fs_repo.py  snapshots.py
tests/: test_chapter_context.py  test_orchestrator.py  test_policies.py  test_review_pipeline.py  test_storage.py
